--- a/googlemediaframework/build.gradle
+++ b/googlemediaframework/build.gradle
@@ -15,10 +15,10 @@
  */
 
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
+//apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 23
     buildToolsVersion '23.0.1'
     defaultConfig {
         minSdkVersion 16
@@ -44,12 +44,12 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r1.5.7'
 }
 
-publish {
-    repoName = 'google-media-framework-android'
-    userOrg = 'google'
-    groupId = 'com.google.android.libraries.mediaframework'
-    artifactId = 'mediaframework'
-    version = '0.2.1'
-    description = 'Google Media Framework for Android.'
-    website = 'https://github.com/googleads/google-media-framework-android'
-}
+//publish {
+//    repoName = 'google-media-framework-android'
+//    userOrg = 'google'
+//    groupId = 'com.google.android.libraries.mediaframework'
+//    artifactId = 'mediaframework'
+//    version = '0.2.1'
+//    description = 'Google Media Framework for Android.'
+//    website = 'https://github.com/googleads/google-media-framework-android'
+//}
