--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
-        classpath 'com.novoda:bintray-release:0.3.4'
+//        classpath 'com.android.tools.build:gradle:2.1.3'
+//        classpath 'com.novoda:bintray-release:0.3.4'
     }
 }
 
