--- a/googlemediaframework/build.gradle
+++ b/googlemediaframework/build.gradle
@@ -41,7 +41,8 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.exoplayer:exoplayer:r1.5.7'
+//    compile 'com.google.android.exoplayer:exoplayer:r1.5.7'
+    compile project(':ExoPlayer:library')
 }
 
 //publish {
